--- a/src/main/res/layout/item_setting.xml
+++ b/src/main/res/layout/item_setting.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="400dp"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="16dp"
@@ -9,9 +9,10 @@
 
     <ImageView
         android:id="@+id/settingIcon"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginEnd="16dp"
+        android:layout_gravity="center"
         app:tint="?attr/colorOnSurface" />
 
     <TextView
@@ -19,11 +20,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:layout_gravity="center"
+        android:textSize="20sp"
+        android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:text="Setting Name" />
 
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/settingToggle"
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
