--- a/src/main/res/layout/item_setting.xml
+++ b/src/main/res/layout/item_setting.xml
@@ -30,6 +30,8 @@
         android:id="@+id/settingToggle"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        app:thumbTint="@color/switch_thumb_color"
+        app:trackTint="@color/switch_track_color"/>
 
 </LinearLayout>
