--- a/src/main/res/layout/item_setting.xml
+++ b/src/main/res/layout/item_setting.xml
@@ -13,7 +13,7 @@
         android:layout_height="40dp"
         android:layout_marginEnd="16dp"
         android:layout_gravity="center"
-        app:tint="?attr/colorOnSurface" />
+        app:tint="@color/white" />
 
     <TextView
         android:id="@+id/settingName"
@@ -22,6 +22,7 @@
         android:layout_weight="1"
         android:layout_gravity="center"
         android:textSize="20sp"
+        android:textColor="@color/white"
         android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:text="Setting Name" />
