--- a/src/main/res/layout/fragment_settings.xml
+++ b/src/main/res/layout/fragment_settings.xml
@@ -7,6 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:padding="20dp"
+    android:backgroundTint="@android:color/transparent"
     android:background="@drawable/rounded_bg">
 
     <RelativeLayout
@@ -19,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:textColor="@color/white"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:text="Settings" />
 
@@ -43,6 +45,7 @@
         android:id="@+id/settingsActionButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="@android:color/transparent"
         app:backgroundTint="@null"
         android:text="Go to System Settings"/>
 
