--- a/src/main/res/layout/fragment_settings.xml
+++ b/src/main/res/layout/fragment_settings.xml
@@ -1,52 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="500dp"
     android:layout_height="wrap_content"
     android:layout_gravity="right"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:padding="20dp"
-    android:backgroundTint="@android:color/transparent"
-    android:background="@drawable/rounded_bg">
+    app:cardCornerRadius="20dp"
+    android:background="@android:color/transparent"
+    app:cardElevation="6dp"
+    android:layout_margin="12dp">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp">
+        android:orientation="vertical"
+        android:background="@drawable/dialog_background"
+        android:padding="20dp">
 
-        <TextView
-            android:id="@+id/settingsTitle"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textColor="@color/white"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:text="Settings" />
+            android:layout_marginBottom="16dp">
 
-        <ImageButton
-            android:id="@+id/settingsCloseButton"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/settingsTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="Settings"
+                android:textColor="@color/white"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+            <ImageButton
+                android:id="@+id/settingsCloseButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:src="@drawable/ic_close" />
+        </RelativeLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/settingsRecyclerView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:src="@drawable/ic_close"
-            android:background="?attr/selectableItemBackgroundBorderless" />
+            android:layout_marginBottom="16dp"
+            tools:listitem="@layout/item_setting" />
 
-    </RelativeLayout>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/settingsActionButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Go to System Settings"
+            android:background="@drawable/button_background"
+            app:backgroundTint="@null" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/settingsRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:listitem="@layout/item_setting"
-        android:layout_marginBottom="16dp" />
+    </LinearLayout>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/settingsActionButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@android:color/transparent"
-        app:backgroundTint="@null"
-        android:text="Go to System Settings"/>
-
-</LinearLayout>
+</androidx.cardview.widget.CardView>
