--- a/src/main/res/color/switch_thumb_color.xml
+++ b/src/main/res/color/switch_thumb_color.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Checked + Pressed -->
-    <item android:color="?attr/colorPrimaryDark" android:state_pressed="true" android:state_checked="true"/>
+    <item android:state_checked="true" android:state_pressed="true" android:color="#004151"/>
     <!-- Unchecked + Pressed -->
-    <item android:color="?attr/colorOnSurfaceVariant" android:state_pressed="true" android:state_checked="false"/>
+    <item android:state_checked="false" android:state_pressed="true" android:color="#163546"/>
     <!-- Checked -->
-    <item android:color="?attr/colorPrimary" android:state_checked="true"/>
-    <!-- Unchecked -->
-    <item android:color="?attr/colorOnSurface"/>
+    <item android:state_checked="true" android:color="#0094ba"/>
+    <!-- Default (unchecked) -->
+    <item android:color="#808080"/>
 </selector>
